<resources>
    <string name="app_name">ChatsUp</string>

    <!--Login Page Strings-->

    <string name="login_page_email_hint">Email</string>
    <string name="login_page_password_hint">Password</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="login_page_register_link">New user? Register here</string>
    <string name="login_error">Incorrect Credentials.</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="login_page_button_text">Login</string>


    <string name="retype_password_hint">Retype Password</string>


    <!--SignUp Page Strings-->

    <string name="signup_page_login_page">Already Registered? Login here</string>
    <string name="signup_page_button_text">Sign Up</string>
    <string name="login_page_full_name_hint">Full Name</string>
    <string name="signup_page_image_select">Select Profile Image</string>

    <!--Home Page Strings-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
</resources>
