<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/login_page_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/main_page_logo_width"
                android:layout_height="@dimen/main_page_logo_height"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/emailLoginPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_page_email_hint"
                    android:textColorHint="@color/login_page_text_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordLoginPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/login_page_password_hint"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:textColorHint="@color/login_page_text_hint"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />

            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/loginButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/login_page_button_background"
                android:text="@string/login_page_button_text"
                android:textColor="@color/login_page_button_text"
                android:textStyle="bold"
                android:onClick="loginFunction"/>

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/login_page_register_link"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                android:onClick="registerFunction"
                android:textSize="15dp" />
        </LinearLayout>
</RelativeLayout>
